# Open-contract

./: .gitignore  Cargo.toml  api.proto  diesel.toml
migrations/2025-03-31-131553_create_project/: up.sql
migrations/2025-04-01-193149_improve_project/: down.sql  up.sql
migrations/2025-04-02-143403_improve_project_with_protofile_name/: down.sql  up.sql
migrations/2025-04-02-200948_add_updated_at_trigger/: down.sql  up.sql
migrations/2025-04-02-201259_create_contracts/: down.sql  up.sql
migrations/2025-04-02-214028_change_project_user/: down.sql  up.sql
migrations/2025-04-02-215144_projects_improve/: down.sql  up.sql
migrations/2025-04-03-131234_user_improve/: down.sql  up.sql
migrations/2025-04-03-163021_add_session/: up.sql
migrations/2025-04-04-083203_add_user_avatar/: down.sql  up.sql
migrations/2025-04-04-133356_contract_comments_fix/: down.sql  up.sql
migrations/2025-04-04-161433_contract_improve/: down.sql  up.sql
src/: main.rs  schema.rs
src/auth/: controller.rs  jwt.rs  middleware.rs  mod.rs  models.rs  service.rs  session_repository.rs
src/contract/: comment_model.rs  controller.rs  mod.rs  model.rs  repository.rs  web.rs
src/file_storage/: minio_client.rs  mod.rs
src/project/: controller.rs  mod.rs  model.rs  repository.rs  web.rs
src/proto_parser/: utils.rs
src/storage/: db.rs
src/swagger_parser/: mod.rs  parser.rs
src/user/: controller.rs  model.rs  repository.rs
src/utils/: http_utils.rs  mod.rs  strings_utils.rs
templates/: _base.html
templates/layouts/: base.html
templates/pages/contract/: contract.html
(+18 files in other folders)
