[package]
name = "open_contract"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
actix-files = "0.6"
actix-multipart = "0.6"
actix-session = { version = "0.8", features = ["cookie-session"] }
actix-identity = "0.6"

diesel = { version = "2.1.0", features = ["chrono", "postgres", "r2d2", "uuid"]}
r2d2 = "0.8"
diesel-async = { version = "0.5.2", features = ["postgres"] }
jsonwebtoken = "8" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.15.0", features = ["v4","serde"] }
askama = "0.13.0"
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
async-trait = "0.1"
minio-rsc = "0.2.3"
bytes = "1.0"
dotenvy = "0.15"
reqwest = { version = "0.12.15", default-features = false, features = ["json"]}
thiserror = "1.0" 
convert_case = "0.6"
rand = "0.9.1"
once_cell = "1.18.0"
dot_proto_parser = { git = "https://github.com/Anna-Karenina/dot_proto_parser.git", version = "0.0.5" }